@@ -34,11 +34,11 @@ def launch_adapt(global_params, justobs='no'):
     ds.close()
 
     # Extract the data from the observation file
-    obs_spectro, obs_photo, obs_spectro_ins, obs_photo_ins = extract_observation(global_params, wav_mod_nativ, attr['res'])
+    obs_spectro, obs_photo, obs_spectro_ins, obs_photo_ins, obs_opt = extract_observation(global_params, wav_mod_nativ, attr['res'])
 
     # Estimate and subtraction of the continuum (if needed)
     if global_params.continuum_sub != 'NA':
-        obs_spectro_c, obs_photo_c, obs_spectro_ins_c, obs_photo_ins_c = extract_observation(global_params, wav_mod_nativ,
+        obs_spectro_c, obs_photo_c, obs_spectro_ins_c, obs_photo_ins_c, obs_opt_c = extract_observation(global_params, wav_mod_nativ,
                                                                                  attr['res'], 'yes')
         for c, cut in enumerate(obs_spectro):
             obs_spectro[c][1] -= obs_spectro_c[c][1]
@@ -49,9 +49,10 @@ def launch_adapt(global_params, justobs='no'):
             flx_obs_extract = obs_spectro[c][1]
             err_obs_extract = obs_spectro[c][2]
             res_obs_extract = obs_spectro[c][3]#np.array(obs_cut[c][3], dtype=float) # New addition (may need to be corrected)
-            cov_obs_extract = obs_spectro[c][4]
-            transm_obs_extract = obs_spectro[c][5]
-            star_flx_obs_extract = obs_spectro[c][6]
+            # Optionals
+            cov_obs_extract = obs_opt[c][0]
+            transm_obs_extract = obs_opt[c][1]
+            star_flx_obs_extract = obs_opt[c][2]
 
         else:
             wav_obs_extract = np.concatenate((wav_obs_extract, obs_spectro[c][0]))
@@ -59,11 +60,11 @@ def launch_adapt(global_params, justobs='no'):
             err_obs_extract = np.concatenate((err_obs_extract, obs_spectro[c][2]))
             res_obs_extract = np.concatenate((res_obs_extract, obs_spectro[c][3]))#np.concatenate((res_obs_extract, np.array(obs_cut[c][3], dtype=float))) # New addition (may need to be corrected)
             if len(cov_obs_extract) != 0:
-                cov_obs_extract = diag_mat([cov_obs_extract, obs_spectro[c][4]])
+                cov_obs_extract = diag_mat([cov_obs_extract, obs_opt[c][0]])
             if len(transm_obs_extract) != 0:
-                transm_obs_extract = np.concatenate((transm_obs_extract, obs_spectro[c][5]))
+                transm_obs_extract = np.concatenate((transm_obs_extract, obs_opt[c][1]))
             if len(star_flx_obs_extract) != 0:
-                star_flx_obs_extract = np.concatenate((star_flx_obs_extract, obs_spectro[c][6]))
+                star_flx_obs_extract = np.concatenate((star_flx_obs_extract, obs_opt[c][2]))
 
         # Compute the inverse of the merged covariance matrix (note: inv(C1, C2) = (in(C1), in(C2)) if C1 and C2 are block matrix on the diagonal)
         # if necessary
@@ -73,7 +74,8 @@ def launch_adapt(global_params, justobs='no'):
             inv_cov_obs_extract = np.asarray([])
 
         # Compile everything
-        obs_spectro_merge = np.asarray([wav_obs_extract, flx_obs_extract, err_obs_extract, res_obs_extract, inv_cov_obs_extract, transm_obs_extract, star_flx_obs_extract], dtype=object)
+        obs_spectro_merge = np.asarray([wav_obs_extract, flx_obs_extract, err_obs_extract, res_obs_extract])
+        obs_opt_merge = np.asarray([inv_cov_obs_extract, transm_obs_extract, star_flx_obs_extract], dtype=object)
 
         # Check-ups and warnings for negative values in the diagonal of the covariance matrix
         if len(cov_obs_extract) != 0 and any(np.diag(cov_obs_extract) < 0):
@@ -90,7 +92,8 @@ def launch_adapt(global_params, justobs='no'):
              obs_spectro=obs_spectro,
              obs_spectro_ins=obs_spectro_ins,
              obs_photo=obs_photo,
-             obs_photo_ins=obs_photo_ins)
+             obs_photo_ins=obs_photo_ins,
+             obs_opt_merge=obs_opt_merge) # Optional arrays kept separatly
 
     # Adaptation of the model grid
     if justobs == 'no':
@@ -151,7 +154,7 @@ def launch_adapt_MOSAIC(global_params, justobs='no'):
         global_params.observation_path = obs
         obs_name = os.path.splitext(os.path.basename(global_params.observation_path))[0]
         
-        obs_spectro, obs_photo, obs_spectro_ins, obs_photo_ins  = extract_observation(global_params, wav_mod_nativ, attr['res'], obs_name=obs_name,
+        obs_spectro, obs_photo, obs_spectro_ins, obs_photo_ins, obs_opt  = extract_observation(global_params, wav_mod_nativ, attr['res'], obs_name=obs_name,
                                                                                       indobs=indobs)
         
         print(obs_photo)
@@ -163,7 +166,7 @@ def launch_adapt_MOSAIC(global_params, justobs='no'):
                   + global_params.wav_for_continuum[indobs] + ' wavelength range')
             print()
         if global_params.continuum_sub[indobs] != 'NA':
-            obs_spectro_c, obs_photo_c, obs_spectro_ins_c, obs_photo_ins_c, obs_cut_cov = extract_observation(global_params, wav_mod_nativ,
+            obs_spectro_c, obs_photo_c, obs_spectro_ins_c, obs_photo_ins_c, obs_opt_c = extract_observation(global_params, wav_mod_nativ,
                                                                                     attr['res'], 'yes', obs_name=obs_name, indobs=indobs)
             for c, cut in enumerate(obs_spectro):
                 obs_spectro[c][1] -= obs_spectro_c[c][1]
@@ -175,9 +178,9 @@ def launch_adapt_MOSAIC(global_params, justobs='no'):
                 flx_obs_extract = obs_spectro[c][1]
                 err_obs_extract = obs_spectro[c][2]
                 res_obs_extract = obs_spectro[c][3]#np.array(obs_cut[c][3], dtype=float) # New addition (may need to be corrected)
-                cov_obs_extract = obs_spectro[c][4]
-                transm_obs_extract = obs_spectro[c][5]
-                star_flx_obs_extract = obs_spectro[c][6]
+                cov_obs_extract = obs_opt[c][0]
+                transm_obs_extract = obs_opt[c][1]
+                star_flx_obs_extract = obs_opt[c][2]
 
             else:
                 wav_obs_extract = np.concatenate((wav_obs_extract, obs_spectro[c][0]))
@@ -185,11 +188,11 @@ def launch_adapt_MOSAIC(global_params, justobs='no'):
                 err_obs_extract = np.concatenate((err_obs_extract, obs_spectro[c][2]))
                 res_obs_extract = np.concatenate((res_obs_extract, obs_spectro[c][3]))#np.concatenate((res_obs_extract, np.array(obs_cut[c][3], dtype=float))) # New addition (may need to be corrected)
                 if len(cov_obs_extract) != 0:
-                    cov_obs_extract = diag_mat([cov_obs_extract, obs_spectro[c][4]])
+                    cov_obs_extract = diag_mat([cov_obs_extract, obs_opt[c][0]])
                 if len(transm_obs_extract) != 0:
-                    transm_obs_extract = np.concatenate((transm_obs_extract, obs_spectro[c][5]))
+                    transm_obs_extract = np.concatenate((transm_obs_extract, obs_opt[c][1]))
                 if len(star_flx_obs_extract) != 0:
-                    star_flx_obs_extract = np.concatenate((star_flx_obs_extract, obs_spectro[c][6]))
+                    star_flx_obs_extract = np.concatenate((star_flx_obs_extract, obs_opt[c][2]))
 
 
             # Compute the inverse of the merged covariance matrix (note: inv(C1, C2) = (in(C1), in(C2)) if C1 and C2 are block matrix on the diagonal)
@@ -200,8 +203,8 @@ def launch_adapt_MOSAIC(global_params, justobs='no'):
                 inv_cov_obs_extract = np.asarray([])
 
             # Compile everything
-            obs_spectro_merge = np.asarray([wav_obs_extract, flx_obs_extract, err_obs_extract, res_obs_extract, inv_cov_obs_extract, transm_obs_extract, star_flx_obs_extract], dtype=object)
-
+            obs_spectro_merge = np.asarray([wav_obs_extract, flx_obs_extract, err_obs_extract, res_obs_extract])
+            obs_opt_merge = np.asarray([inv_cov_obs_extract, transm_obs_extract, star_flx_obs_extract], dtype=object)
 
             # Check-ups and warnings for negative values in the diagonal of the covariance matrix
             if len(cov_obs_extract) != 0 and any(np.diag(cov_obs_extract) < 0):
@@ -217,7 +220,8 @@ def launch_adapt_MOSAIC(global_params, justobs='no'):
                     obs_spectro=obs_spectro,
                     obs_spectro_ins=obs_spectro_ins,
                     obs_photo=obs_photo,
-                    obs_photo_ins=obs_photo_ins)
+                    obs_photo_ins=obs_photo_ins,
+                    obs_opt_merge=obs_opt_merge) # Optional arrays kept separatly
         
         # Adaptation of the model grid
         if justobs == 'no':
